--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ body {
     height: 100%;
     left: 0;
     bottom: 0;
-    background: #FFFFFF;
+    background: #000080;
     display: flex;
     align-items: center;
 }
