--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /*** Spinner Start ***/
 /*** Spinner ***/
 body {
-    background-color: #FFFFFF !important;
+    background-color: #000080 !important;
 }
 
 #spinner {
