--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@
     height: 100%;
     left: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, .7);
+    background: #ADD8E6;
     display: flex;
     align-items: center;
 }
