--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+.footer-toggle-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+    background: white;
+    border: 2px solid #000;
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.footer-toggle-btn i {
+    font-size: 32px;
+    color: black;
+}
+
+
 .projects-container {
     position: relative;
     display: flex;
